--- a/design.css
+++ b/design.css
@@ -19,8 +19,10 @@ h1 {
 
 /* サブタイトル（名前など）を中央寄せに */
 .subtitle {
-  text-align: center;
-  color: #555;
+  text-align: center !important;
+  display: block;
+  width: 100%;
+  colpr: #555;
   font-size: 16px;
   margin: 6px 0 22px;
 }
