--- a/design.css
+++ b/design.css
@@ -22,7 +22,7 @@ h1 {
   text-align: center !important;
   display: block;
   width: 100%;
-  colpr: #555;
+  color: #555;
   font-size: 16px;
   margin: 6px 0 22px;
 }
